# rsyslog

./: configure.ac
contrib/omhttp/: omhttp.c
devtools/ci/: Dockerfile.arm
doc/source/: features.rst
doc/source/concepts/: messageparser.rst  queues.rst
doc/source/configuration/: output_channels.rst
doc/source/configuration/action/: index.rst
doc/source/configuration/global/: index.rst
doc/source/configuration/global/options/: rsconf1_abortonuncleanconfig.rst  rsconf1_generateconfiggraph.rst
doc/source/configuration/input_directives/: rsconf1_escape8bitcharsonreceive.rst  rsconf1_escapecontrolcharactersonreceive.rst
doc/source/configuration/modules/: imhttp.rst  imptcp.rst  imrelp.rst  imtcp.rst  mmutf8fix.rst  omhttp.rst  ommongodb.rst  omotel.rst  omruleset.rst  omusrmsg.rst
doc/source/configuration/ruleset/: rsconf1_rulesetcreatemainqueue.rst  rsconf1_rulesetparser.rst
doc/source/deployments/: index.rst  rosi_for_decision_makers.rst  rosi_for_platform_teams.rst
doc/source/development/: dev_oplugins.rst
doc/source/getting_started/: index.rst  next_steps.rst  rosi_for_beginners.rst
doc/source/historical/: php_syslog_ng.rst
doc/source/includes/: footer.inc.rst
doc/source/installation/: build_from_repo.rst
doc/source/rainerscript/: global.rst
doc/source/reference/parameters/: imrelp-ratelimit-name.rst  omhttp-healthchecktimedelay.rst  omusrmsg-ratelimit-name.rst
doc/source/tutorials/: tls.rst
doc/source/whitepapers/: syslog_parsing.rst
doc/tools/: README.md  check-html-links.py
packaging/docker/dev_env/fedora/pkg_base/36/: Dockerfile
plugins/imrelp/: imrelp.c
plugins/omkafka/: omkafka.c
plugins/omotel/: MODULE_METADATA.yaml  Makefile.am  omotel.c  omotel_http.c  omotel_http.h  otlp_json.c  otlp_protobuf.c  otlp_protobuf.h
plugins/omotel/proto/: README
plugins/omotel/proto/opentelemetry/proto/common/v1/: common.proto
plugins/omotel/proto/opentelemetry/proto/logs/v1/: logs.proto
plugins/omotel/proto/opentelemetry/proto/resource/v1/: resource.proto
tests/: diag.sh  diskqueue-oncorruption-missing-segment.sh  imfile-logrotate-async.sh  imfile-logrotate-copytruncate.sh  imfile-logrotate-multiple.sh  imfile-logrotate-nocopytruncate.sh  imfile-logrotate.sh  imklog_ratelimit_name.sh  imrelp_ratelimit_name.sh  omotel-protobuf-basic.sh  omusrmsg_ratelimit_name.sh
tools/: omusrmsg.c  rsyslogd.c
